test/res/error/cd9_res2.tmp
[04m[00;31mError: [00mUNSET VAR [1;32m([00mOLDPWD[1;32m)[00m
[04m[00;31mError: [00mUNSET VAR [1;32m([00mOLDPWD[1;32m)[00m
